
syntax = "proto3";

package table;

import "github.com/coschain/contentos-go/prototype/type.proto";

message so_transactionObject {
	
    prototype.sha256            trx_id            =      1;
	
    prototype.time_point_sec    expiration        =      2;
	  
}


message so_list_transactionObject_by_expiration {
	prototype.time_point_sec 	expiration    = 1;
	prototype.sha256         	trx_id        = 2;
}


message so_unique_transactionObject_by_trx_id {
	prototype.sha256         	trx_id        = 1;
}
